--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <center><h2>WELCOME TO ONLINE CLASS</h2></center>
+
+<center>This is Java programming class</center>
 </body>
 </html>
